chore: add support for airbnb style guide - added support for airbnb style guide with prettier and eslint. - updated all packages to their latest versions - removed yarn as package manager

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
   "extends": [
     "standard",
     "standard-react",
+    "airbnb",
     "plugin:prettier/recommended",
     "prettier/standard",
     "prettier/react",
