chore:  rework library setup
This change introduces a rework of the entire library.

Prettier config is now solid, support for styled-components, polished, eslint and babel loader has been added.
Also, storybook is now the integral workflow. for the entire library.

Furthermore, the version number has been adjusted to properly reflect the semantic version cycle to be used going forward.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
     "browser": true,
     "es6": true
   },
-  "extends": ["plugin:react/recommended", "airbnb"],
+  "extends": ["plugin:react/recommended", "airbnb", "prettier"],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
@@ -23,6 +23,17 @@
       {
         "extensions": [".ts", ".tsx"]
       }
-    ]
+    ],
+    "import/extensions": "off" // fix eslint import extension issues
+  },
+  // fix eslint import extension issues
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "paths": ["src"],
+        "extensions": [".js", ".jsx", ".ts", ".tsx"],
+        "moduleDirectory": ["node_modules", "src/"]
+      }
+    }
   }
 }
