--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "predeploy": "cd example && yarn install && yarn run build",
     "deploy": "gh-pages -d example/build",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "chromatic": "npx chromatic"
   },
   "peerDependencies": {
     "@types/styled-components": "^5.1.2",
@@ -35,7 +36,6 @@
     "@storybook/addon-actions": "^6.0.20",
     "@storybook/addon-docs": "^6.0.20",
     "@storybook/addon-essentials": "^6.0.20",
-    "@storybook/addon-knobs": "^6.0.20",
     "@storybook/addon-links": "^6.0.20",
     "@storybook/addon-storysource": "^6.0.20",
     "@storybook/react": "^6.0.20",
