--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -28,7 +28,7 @@ jobs:
           npm install -g yarn
           yarn --pure-lockfile
       - name: Build Storybook
-        run: yarn build:storybook
+        run: yarn build-storybook
       - name: Publish to Chromatic
         uses: chromaui/action@v1
         with:
