--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "camara",
-  "version": "0.2.4-alpha",
+  "version": "0.2.5-alpha",
   "description": "a design system that helps you build your ideas quickly and with less code",
   "author": "Camaradotspace",
   "license": "MIT",
@@ -32,7 +32,7 @@
     "deploy": "gh-pages -d example/build",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "chromatic": "npx chromatic --project-token"
+    "chromatic": "npx chromatic"
   },
   "peerDependencies": {
     "@types/styled-components": "^5.1.2",
