--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
     "predeploy": "cd example && yarn install && yarn run build",
-    "deploy": "gh-pages -d example/build",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
     "@types/styled-components": "^5.1.2",
@@ -32,13 +30,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.4",
-    "@storybook/addon-actions": "^6.0.20",
-    "@storybook/addon-docs": "^6.0.20",
-    "@storybook/addon-essentials": "^6.0.20",
-    "@storybook/addon-knobs": "^6.0.20",
-    "@storybook/addon-links": "^6.0.20",
-    "@storybook/addon-storysource": "^6.0.20",
-    "@storybook/react": "^6.0.20",
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^10.3.0",
     "@testing-library/user-event": "^12.0.2",
@@ -51,7 +42,6 @@
     "@typescript-eslint/parser": "^3.3.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
-    "chromatic": "^5.1.0",
     "cross-env": "^7.0.2",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.0",
@@ -80,7 +70,5 @@
   "files": [
     "dist"
   ],
-  "dependencies": {
-    "polished": "^3.6.6"
-  }
+  "dependencies": {}
 }
