--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "repository": "Camaradotspace/camara-react",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
-  "source": "src/index.ts",
+  "source": "src/index.tsx",
   "engines": {
     "node": ">=10"
   },
@@ -21,7 +21,8 @@
     "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
     "predeploy": "cd example && yarn install && yarn run build",
-    "deploy": "gh-pages -d example/build"
+    "deploy": "gh-pages -d example/build",
+    "release": "auto shipit"
   },
   "peerDependencies": {
     "@types/styled-components": "^5.1.2",
@@ -30,6 +31,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.4",
+    "@storybook/addon-actions": "^6.0.20",
+    "@storybook/addon-docs": "^6.0.20",
+    "@storybook/addon-essentials": "^6.0.20",
+    "@storybook/addon-links": "^6.0.20",
+    "@storybook/addon-storysource": "^6.0.20",
+    "@storybook/react": "^6.0.20",
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^10.3.0",
     "@testing-library/user-event": "^12.0.2",
@@ -71,5 +78,7 @@
   "files": [
     "dist"
   ],
-  "dependencies": {}
+  "dependencies": {
+    "polished": "^3.6.6"
+  }
 }
