--- a/package.json
+++ b/package.json
@@ -64,11 +64,12 @@
     "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
     "react-scripts": "^3.4.3",
-    "stitches-reset": "^1.0.0",
     "typescript": "^3.9.5"
   },
   "files": [
     "dist"
   ],
-  "dependencies": {}
+  "dependencies": {
+    "stitches-reset": "^1.0.0"
+  }
 }
