--- a/example/package.json
+++ b/example/package.json
@@ -18,7 +18,7 @@
     "@types/react": "link:../node_modules/@types/react",
     "@types/react-dom": "link:../node_modules/@types/react-dom",
     "camara": "link:..",
-    "eslint": "^7.9.0",
+    "eslint": "6.6.0",
     "react": "link:../node_modules/react",
     "react-dom": "link:../node_modules/react-dom",
     "react-scripts": "link:../node_modules/react-scripts",
