--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "camara",
-  "version": "0.1.11",
-  "description": "a design system that helps you build your ideas quickly and with less code",
+  "version": "0.2.0",
+  "description": "a design system that helps you build your ideas quickly",
   "author": "Camaradotspace",
   "license": "MIT",
   "repository": "Camaradotspace/camara-react",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
-  "source": "src/index.ts",
+  "source": "src/index.tsx",
   "engines": {
     "node": ">=10"
   },
@@ -22,33 +22,41 @@
     "test:watch": "react-scripts test --env=jsdom",
     "predeploy": "cd example && yarn install && yarn run build",
     "deploy": "gh-pages -d example/build",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "generate": "node utils/create-component",
     "release": "auto shipit"
   },
   "peerDependencies": {
-    "@stitches/react": "^0.0.2",
-    "react": "^16.13.1"
+    "@types/styled-components": "^5.1.4",
+    "react": "^16.13.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.4",
-    "@stitches/react": "^0.0.2",
+    "@types/styled-components": "^5.1.4",
+    "@storybook/addon-actions": "^6.0.27",
+    "@storybook/addon-essentials": "^6.0.27",
+    "@storybook/addon-links": "^6.0.27",
+    "@storybook/react": "^6.0.27",
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^11.0.4",
     "@testing-library/user-event": "^12.1.6",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.2",
-    "@types/react": "^16.9.38",
-    "@types/react-dom": "^16.9.8",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
-    "auto": "^9.53.1",
+    "auto": "^10.13.2",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "8.1.0",
     "cross-env": "^7.0.2",
-    "eslint": "6.6.0",
+    "eslint": "7.18.0",
     "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-config-standard-react": "^9.2.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-config-standard-react": "^11.0.1",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-node": "^11.1.0",
@@ -56,21 +64,23 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.21.2",
     "eslint-plugin-react-hooks": "^4.1.2",
-    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-standard": "^5.0.0",
     "gh-pages": "^3.0.0",
     "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-is": "^16.13.1",
-    "react-scripts": "^3.4.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-is": "^17.0.1",
+    "react-scripts": "^4.0.1",
+    "styled-components": "^5.2.1",
     "typescript": "^4.0.3"
   },
   "files": [
     "dist"
   ],
   "dependencies": {
-    "stitches-reset": "^1.0.0"
+    "colors": "^1.4.0",
+    "polished": "^4.0.3"
   }
 }
