feat(component): add new layout components
added `box`, `flex`, and `spacer` components. Improved `button`, `avatar`, `text` and `title`
components.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "camara",
-  "version": "0.2.0",
+  "version": "1.0.0-beta.01",
   "description": "a design system that helps you build your ideas quickly",
   "author": "Camaradotspace",
   "license": "MIT",
