--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "camara",
-  "version": "1.0.0-beta.6",
+  "version": "1.0.0-beta.7",
   "main": "build/index.js",
   "module": "build/index.esm.js",
   "files": [
@@ -36,6 +36,7 @@
     "gh-release": "npm run build && auto release"
   },
   "peerDependencies": {
+    "@types/styled-components": "^5.1.0",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
     "styled-components": "^5.1.1"
@@ -55,7 +56,8 @@
     "@types/jest": "^26.0.20",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
-    "@types/styled-components": "^5.1.0",
+    "@types/rollup-plugin-peer-deps-external": "^2.2.0",
+    "@types/styled-components": "^5.1.7",
     "auto": "^10.13.2",
     "babel-loader": "^8.1.0",
     "babel-preset-react-app": "^10.0.0",
