--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "camara",
-  "version": "1.0.0-beta.7",
+  "version": "1.0.0-beta.8",
   "main": "build/index.js",
   "module": "build/index.esm.js",
   "files": [
@@ -36,7 +36,7 @@
     "gh-release": "npm run build && auto release"
   },
   "peerDependencies": {
-    "@types/styled-components": "^5.1.0",
+    "@types/styled-components": "^5.1.7",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
     "styled-components": "^5.1.1"
@@ -91,5 +91,8 @@
     "ts-jest": "^26.5.0",
     "typescript": "^4.1.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@types/styled-components": "^5.1.7",
+    "styled-components": "^5.1.1"
+  }
 }
