--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/Camaradotspace/camara-react#readme",
   "scripts": {
     "build": "rollup -c",
+    "dev": "rollup -c --watch",
     "test": "jest",
     "test:watch": "jest --watch",
     "storybook": "start-storybook -p 6006",
@@ -61,6 +62,7 @@
     "auto": "^10.13.2",
     "babel-loader": "^8.1.0",
     "babel-preset-react-app": "^10.0.0",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "7.19.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^7.2.0",
@@ -94,5 +96,10 @@
   "dependencies": {
     "@types/styled-components": "^5.1.7",
     "styled-components": "^5.1.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
