--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@storybook/addon-actions": "^6.0.27",
+    "@storybook/addon-controls": "^6.1.21",
     "@storybook/addon-essentials": "^6.0.27",
     "@storybook/addon-links": "^6.0.27",
     "@storybook/react": "^6.1.16",
