--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.7",
+    "react-feather": "^2.0.9",
     "styled-components": "^5.1.1"
   },
   "config": {
