--- a/website/package.json
+++ b/website/package.json
@@ -8,10 +8,12 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "@xstyled/styled-components": "^2.4.1",
+    "camara": "^1.0.0-beta.8",
     "gatsby": "^2.15.18",
+    "polished": "^4.1.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "smooth-doc": "^5.0.4",
-    "camara": "^1.0.0-beta.8"
+    "smooth-doc": "^5.0.4"
   }
 }
