--- a/website/package.json
+++ b/website/package.json
@@ -14,6 +14,7 @@
     "polished": "^4.1.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-feather": "^2.0.9",
     "smooth-doc": "^5.0.4"
   }
 }
