docs(homepage): update docs homepage

--- a/website/package.json
+++ b/website/package.json
@@ -11,10 +11,13 @@
     "@xstyled/styled-components": "^2.4.1",
     "camara": "^1.0.0-beta.8",
     "gatsby": "^2.15.18",
+    "gatsby-plugin-react-helmet": "^4.2.0",
+    "gatsby-source-filesystem": "^3.2.0",
     "polished": "^4.1.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-feather": "^2.0.9",
+    "react-helmet": "^6.1.0",
     "smooth-doc": "^5.0.4"
   }
 }
