--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c --watch",
+    "lint": "eslint .",
+    "lint-and-fix": "eslint . --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "storybook": "start-storybook -p 6006",
@@ -37,65 +39,65 @@
     "gh-release": "npm run build && auto release"
   },
   "peerDependencies": {
-    "@types/styled-components": "^5.1.7",
+    "@types/styled-components": "^5.1.9",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.14",
+    "@babel/core": "^7.14.0",
     "@babel/eslint-parser": "^7.13.14",
-    "@babel/eslint-plugin": "^7.13.10",
+    "@babel/eslint-plugin": "^7.13.16",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
-    "@storybook/addon-actions": "^6.2.1",
-    "@storybook/addon-controls": "^6.2.1",
-    "@storybook/addon-essentials": "^6.2.1",
-    "@storybook/addon-links": "^6.2.1",
-    "@storybook/react": "^6.2.1",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@types/jest": "^26.0.22",
-    "@types/react": "^17.0.3",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-controls": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@types/jest": "^26.0.23",
+    "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "@types/rollup-plugin-peer-deps-external": "^2.2.0",
-    "@types/styled-components": "^5.1.7",
-    "auto": "^10.24.1",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "auto": "^10.26.0",
     "babel-loader": "^8.1.0",
     "babel-preset-react-app": "^10.0.0",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "7.23.0",
+    "eslint": "7.25.0",
     "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^8.1.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-config-standard-react": "^11.0.1",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.1.2",
     "eslint-plugin-standard": "^5.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "node-sass": "^5.0.0",
-    "polished": "^4.1.1",
     "prettier": "^2.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "rollup": "^2.44.0",
+    "rollup": "^2.46.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "sass-loader": "^11.0.1",
-    "styled-components": "^5.1.1",
-    "ts-jest": "^26.5.4",
-    "typescript": "^4.2.3"
+    "ts-jest": "^26.5.5",
+    "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@storybook/react": "^6.2.9",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
     "@types/styled-components": "^5.1.9",
+    "polished": "^4.1.2",
     "react-feather": "^2.0.9",
     "styled-components": "^5.2.3"
   },
