--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": "src",
     "rootDir": "src",
     "declaration": true,
     "declarationDir": "build",
@@ -16,6 +17,8 @@
   "exclude": [
     "node_modules",
     "build",
+    "website",
+    "website/**/*js",
     "storybook-static",
     "src/**/*.stories.tsx",
     "src/**/*.test.tsx"
