--- a/package.json
+++ b/package.json
@@ -50,12 +50,14 @@
     "@babel/eslint-parser": "^7.13.14",
     "@babel/eslint-plugin": "^7.13.16",
     "@rollup/plugin-commonjs": "^18.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-controls": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
     "@types/jest": "^26.0.23",
+    "@types/lodash": "^4.14.169",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "@types/rollup-plugin-peer-deps-external": "^2.2.0",
@@ -98,9 +100,11 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@types/styled-components": "^5.1.9",
+    "lodash": "^4.17.21",
     "polished": "^4.1.2",
     "react-feather": "^2.0.9",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "webfontloader": "^1.6.28"
   },
   "config": {
     "commitizen": {
