--- a/website/package.json
+++ b/website/package.json
@@ -11,6 +11,7 @@
     "@xstyled/styled-components": "^2.4.1",
     "camara": "^1.0.0-beta.8",
     "gatsby": "^2.15.18",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-react-helmet": "^4.2.0",
     "gatsby-source-filesystem": "^3.2.0",
     "polished": "^4.1.1",
