--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
   },
   "peerDependencies": {
     "@types/styled-components": "^5.1.9",
+    "polished": "^4.1.2",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
@@ -56,11 +58,22 @@
     "@storybook/addon-controls": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
+    "@storybook/react": "^6.2.9",
+    "@styled-system/css": "^5.1.5",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
+    "@types/styled-components": "^5.1.9",
+    "@types/styled-system": "^5.1.11",
+    "polished": "^4.1.2",
+    "react-feather": "^2.0.9",
+    "styled-components": "^5.2.3",
+    "styled-system": "^5.1.5",
     "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.169",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "@types/rollup-plugin-peer-deps-external": "^2.2.0",
+    "@types/styled-system__css": "^5.0.15",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "auto": "^10.26.0",
@@ -94,18 +107,6 @@
     "sass-loader": "^11.0.1",
     "ts-jest": "^26.5.5",
     "typescript": "^4.2.4"
-  },
-  "dependencies": {
-    "@storybook/react": "^6.2.9",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@types/styled-components": "^5.1.9",
-    "lodash": "^4.17.21",
-    "polished": "^4.1.2",
-    "react-feather": "^2.0.9",
-    "styled-components": "^5.2.3",
-    "styled-system": "^5.1.5",
-    "webfontloader": "^1.6.28"
   },
   "config": {
     "commitizen": {
