--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "camara",
-  "version": "1.0.0-beta.30",
+  "version": "1.0.0-beta.31",
   "main": "build/index.js",
   "module": "build/index.esm.js",
   "files": [
@@ -108,6 +108,15 @@
     "sass-loader": "^11.0.1",
     "ts-jest": "^26.5.5",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "polished": "^4.1.2",
+    "react-feather": "^2.0.9",
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0",
+    "styled-components": "^5.2.3",
+    "styled-system": "^5.1.5",
+    "@styled-system/css": "^5.1.5"
   },
   "config": {
     "commitizen": {
