--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
     "gh-release": "npm run build && auto release"
   },
   "peerDependencies": {
+    "@styled-system/css": "^5.1.5",
     "@types/styled-components": "^5.1.9",
     "polished": "^4.1.2",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
     "styled-components": "^5.2.3",
-    "styled-system": "^5.1.5",
-    "@styled-system/css": "^5.1.5"
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
@@ -63,21 +63,17 @@
     "@styled-system/css": "^5.1.5",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
-    "@types/styled-components": "^5.1.9",
-    "@types/styled-system": "^5.1.11",
-    "polished": "^4.1.2",
-    "react-feather": "^2.0.9",
-    "styled-components": "^5.2.3",
-    "styled-system": "^5.1.5",
     "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.169",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "@types/rollup-plugin-peer-deps-external": "^2.2.0",
+    "@types/styled-components": "^5.1.9",
+    "@types/styled-system": "^5.1.11",
     "@types/styled-system__css": "^5.0.15",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
-    "auto": "^10.26.0",
+    "auto": "^10.29.0",
     "babel-loader": "^8.1.0",
     "babel-preset-react-app": "^10.0.0",
     "cz-conventional-changelog": "3.3.0",
@@ -97,30 +93,39 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "node-sass": "^5.0.0",
+    "polished": "^4.1.2",
     "prettier": "^2.1.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0",
+    "react-feather": "^2.0.9",
     "rollup": "^2.46.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "sass-loader": "^11.0.1",
+    "styled-components": "^5.2.3",
+    "styled-system": "^5.1.5",
     "ts-jest": "^26.5.5",
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@styled-system/css": "^5.1.5",
     "polished": "^4.1.2",
-    "react-feather": "^2.0.9",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
+    "react-feather": "^2.0.9",
     "styled-components": "^5.2.3",
-    "styled-system": "^5.1.5",
-    "@styled-system/css": "^5.1.5"
+    "styled-system": "^5.1.5"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "auto": {
+    "plugins": [
+      "npm"
+    ]
   }
 }
