--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "auto": "^10.29.0",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "8.2.2",
     "babel-preset-react-app": "^10.0.0",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "7.25.0",
