--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "deploy": "gh-pages -d example/build",
     "npm": "yarn run build && npm publish",
     "semantic-release": "semantic-release",
-    "dry-run": "semantic-release --dry-run --no-ci --branches 'main'"
+    "dry-run": "semantic-release --dry-run --no-ci --branches 'main'",
+    "release": "release-it"
   },
   "branches": [
     {
@@ -126,6 +127,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
+    "release-it": "^14.6.2",
     "semantic-release": "^17.4.3",
     "styled-components": "^5.1.1",
     "styled-system": "^5.1.5",
