--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "test:lint": "eslint .",
     "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
+    "storybook": "start-storybook -p 6006",
+    "storybook:export": "build-storybook",
+    "docs": "cd website && yarn develop",
     "predeploy": "cd example && yarn install && yarn run build",
     "deploy": "gh-pages -d example/build",
     "npm": "yarn run build && npm publish",
@@ -86,12 +89,18 @@
   },
   "repositoryUrl": "https://github.com/Camaradotspace/camara-react",
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": "^16.0.0",
+    "react-feather": "^2.0.9"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/react": "^6.2.9",
     "@styled-system/css": "^5.1.5",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
@@ -107,6 +116,7 @@
     "@typescript-eslint/parser": "^4.24.0",
     "auto": "^10.29.0",
     "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.2.2",
     "cross-env": "^7.0.2",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^7.27.0",
@@ -120,6 +130,7 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-standard": "^5.0.0",
     "gh-pages": "^3.1.0",
+    "jest": "^27.0.0",
     "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
     "polished": "^4.1.2",
@@ -131,12 +142,14 @@
     "semantic-release": "^17.4.3",
     "styled-components": "^5.1.1",
     "styled-system": "^5.1.5",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   },
   "files": [
     "dist"
   ],
   "dependencies": {
+    "react-feather": "^2.0.9",
     "react-is": "^17.0.2"
   },
   "config": {
