--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "camara",
-  "version": "1.0.0-beta.46",
+  "version": "1.0.0-beta.75",
   "description": "A design system that helps you build your ideas quickly",
   "author": {
     "name": "Presh Onyee",
@@ -130,10 +130,11 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-standard": "^5.0.0",
     "gh-pages": "^3.1.0",
-    "jest": "^27.0.0",
+    "jest": "^27.0.3",
+    "jest-watch-typeahead": "^0.6.4",
     "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
-    "polished": "^4.1.2",
+    "polished": "^4.1.3",
     "prettier": "^2.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -149,6 +150,7 @@
     "dist"
   ],
   "dependencies": {
+    "@stitches/react": "^0.1.9",
     "react-feather": "^2.0.9",
     "react-is": "^17.0.2"
   },
