docs(storybook): add theme support to storybook

--- a/package.json
+++ b/package.json
@@ -32,10 +32,8 @@
     "test:watch": "jest --watch",
     "lint": "tsdx lint src",
     "prepare": "tsdx build",
-    "storybook": "start-storybook -p 6006",
-    "prebuild-storybook": "yarn icons",
-    "storybook:export": "build-storybook",
-    "chromatic": "CHROMATIC_APP_CODE=$CHROMATIC_APP_CODE chromatic --exit-zero-on-changes",
+    "storybook": "start-storybook -p 6006 --no-manager-cache",
+    "build-storybook": "build-storybook",
     "docs": "cd website && yarn develop",
     "npm": "yarn run build && npm publish",
     "semantic-release": "semantic-release",
@@ -98,7 +96,9 @@
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
+    "@storybook/addons": "^6.2.9",
     "@storybook/react": "^6.2.9",
+    "@storybook/theming": "^6.2.9",
     "@svgr/cli": "^5.5.0",
     "@testing-library/dom": "^7.31.0",
     "@testing-library/react": "^11.2.7",
@@ -107,7 +107,7 @@
     "@types/react-dom": "^17.0.5",
     "babel-loader": "^8.2.2",
     "camelcase": "^6.2.0",
-    "chromatic": "^5.9.0",
+    "chromatic": "5.5.1-dev.1",
     "cz-conventional-changelog": "3.3.0",
     "husky": "^6.0.0",
     "jest": "^27.0.4",
