chore(release): v1.0.0-beta.77
fix deps issue

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "camara",
-  "version": "1.0.0-beta.76",
+  "version": "1.0.0-beta.77",
   "description": "A design system that helps you build your ideas quickly",
   "author": {
     "name": "Presh Onyee",
@@ -87,7 +87,10 @@
   "peerDependencies": {
     "react": ">=16"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@stitches/react": "^0.1.9",
+    "react-feather": "^2.0.9"
+  },
   "devDependencies": {
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.5",
