--- a/website/package.json
+++ b/website/package.json
@@ -8,8 +8,9 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "@stitches/react": "^0.2.2",
     "@xstyled/styled-components": "^2.4.1",
-    "camara": "^1.0.0-beta.84",
+    "camara": "^1.0.0-beta.87",
     "gatsby": "^2.15.18",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-react-helmet": "^4.2.0",
