--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
     "@storybook/addons": "^6.2.9",
+    "@storybook/client-api": "^6.3.4",
     "@storybook/react": "^6.2.9",
     "@storybook/theming": "^6.2.9",
     "@svgr/cli": "^5.5.0",
