--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "@storybook/addon-links": "^6.2.9",
     "@storybook/addons": "^6.2.9",
     "@storybook/client-api": "^6.3.4",
-    "@storybook/react": "^6.2.9",
+    "@storybook/react": "6.3.6",
     "@storybook/theming": "^6.2.9",
     "@svgr/cli": "^5.5.0",
     "@testing-library/dom": "^7.31.0",
