--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "camara",
-  "version": "1.0.0-beta.92",
+  "version": "1.0.0-beta.93",
   "description": "A design system that helps you build your ideas quickly",
   "author": {
     "name": "Presh Onyee",
@@ -89,7 +89,9 @@
   },
   "dependencies": {
     "@stitches/react": "^0.2.2",
-    "react-feather": "^2.0.9"
+    "@storybook/core": "^6.3.7",
+    "react-feather": "^2.0.9",
+    "sharp": "^0.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
@@ -105,7 +107,7 @@
     "@svgr/cli": "^5.5.0",
     "@testing-library/dom": "^7.31.0",
     "@testing-library/react": "^11.2.7",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^27.0.1",
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
     "babel-loader": "^8.2.2",
