--- a/package.json
+++ b/package.json
@@ -88,21 +88,19 @@
     "react": ">=16"
   },
   "dependencies": {
-    "@stitches/react": "^0.2.2",
-    "@storybook/core": "^6.3.7",
-    "react-feather": "^2.0.9",
-    "sharp": "^0.29.0"
+    "@stitches/react": "latest",
+    "react-feather": "^2.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.5",
     "@storybook/addon-a11y": "^6.2.9",
-    "@storybook/addon-actions": "^6.2.9",
-    "@storybook/addon-essentials": "^6.2.9",
-    "@storybook/addon-links": "^6.2.9",
+    "@storybook/addon-actions": "^6.3.8",
+    "@storybook/addon-essentials": "^6.3.8",
+    "@storybook/addon-links": "^6.3.8",
     "@storybook/addons": "^6.2.9",
     "@storybook/client-api": "^6.3.4",
-    "@storybook/react": "6.3.6",
+    "@storybook/react": "^6.3.8",
     "@storybook/theming": "^6.2.9",
     "@svgr/cli": "^5.5.0",
     "@testing-library/dom": "^7.31.0",
