--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "camara",
-  "version": "1.0.0-beta.95",
+  "version": "1.0.0-beta.98",
   "description": "A design system that helps you build your ideas quickly",
   "author": {
     "name": "Presh Onyee",
@@ -88,8 +88,9 @@
     "react": ">=16"
   },
   "dependencies": {
-    "@stitches/react": "latest",
-    "react-feather": "^2.0.9"
+    "@stitches/react": "0.2.2",
+    "react-feather": "^2.0.9",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
@@ -108,6 +109,7 @@
     "@types/jest": "^27.0.1",
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
+    "@types/styled-components": "^5.1.14",
     "babel-loader": "^8.2.2",
     "camelcase": "^6.2.0",
     "chromatic": "5.5.1-dev.1",
