--- a/website/package.json
+++ b/website/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-react-helmet": "^4.2.0",
     "gatsby-source-filesystem": "^3.2.0",
     "polished": "^4.1.1",
+    "postcss": "^8.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
